# ALE-Atari-Width

./: README.md  ale  episode.0  episode.1  iw1.search-agent.trace  makeConfig.sh  makefile  makefile.linux  rollout_iw1.search-agent.trace  tags
backgrounds/seaquest/subtracted/background/: background.matrix
backgrounds/space_invaders/: background.matrix
models/freeway/cs/27X20X16/: model_frozen.pb
python/screens/.ipynb_checkpoints/: objects_extract-checkpoint.ipynb
python/src/freeze_graph/: build.sh  freeze_graph.py
python/trained_models/freeway/af_cnn/: model_frozen.pb
python_nn_model/Autoencoder/: AEModel.py  batch_train.py  constants.py  layers.py  predict.py  savemean.py  train.py  training.ipynb
python_nn_model/Autoencoder/.ipynb_checkpoints/: autoencoder_test-checkpoint.ipynb  autoencoder_train-checkpoint.ipynb  cash-checkpoint.ipynb  models-checkpoint.ipynb  training-checkpoint.ipynb
python_nn_model/Autoencoder/AE_nn_log/: events.out.tfevents.1531833945.hangyuxdeMacBook-Pro.local  events.out.tfevents.1531835133.hangyuxdeMacBook-Pro.local  events.out.tfevents.1532225794.hangyuxdeMacBook-Pro.local  events.out.tfevents.1532225943.hangyuxdeMacBook-Pro.local  events.out.tfevents.1532226033.hangyuxdeMacBook-Pro.local  events.out.tfevents.1532226229.hangyuxdeMacBook-Pro.local  events.out.tfevents.1532231227.hangyuxdeMacBook-Pro.local  events.out.tfevents.1532231290.hangyuxdeMacBook-Pro.local  events.out.tfevents.1532236008.hangyuxdeMacBook-Pro.local  events.out.tfevents.1532236354.hangyuxdeMacBook-Pro.local  events.out.tfevents.1532236547.hangyuxdeMacBook-Pro.local  events.out.tfevents.1532239617.hangyuxdeMacBook-Pro.local  events.out.tfevents.1532346353.hangyuxdeMacBook-Pro.local  events.out.tfevents.1532497641.hangyuxdeMacBook-Pro.local  events.out.tfevents.1532498685.hangyuxdeMacBook-Pro.local  events.out.tfevents.1532499423.hangyuxdeMacBook-Pro.local  events.out.tfevents.1532499574.hangyuxdeMacBook-Pro.local  events.out.tfevents.1532509307.hangyuxdeMacBook-Pro.local  events.out.tfevents.1532509388.hangyuxdeMacBook-Pro.local  events.out.tfevents.1532509405.hangyuxdeMacBook-Pro.local  events.out.tfevents.1532516816.hangyuxdeMacBook-Pro.local  events.out.tfevents.1532518760.hangyuxdeMacBook-Pro.local  events.out.tfevents.1532519228.hangyuxdeMacBook-Pro.local  events.out.tfevents.1532519279.hangyuxdeMacBook-Pro.local  events.out.tfevents.1532519337.hangyuxdeMacBook-Pro.local  events.out.tfevents.1532519520.hangyuxdeMacBook-Pro.local  events.out.tfevents.1532520108.hangyuxdeMacBook-Pro.local  events.out.tfevents.1532520367.hangyuxdeMacBook-Pro.local  events.out.tfevents.1532759350.hangyuxdeMacBook-Pro.local
python_nn_model/Autoencoder/ckpt/: model.index
python_nn_model/Autoencoder/ckpt/freeway/: model.data-00000-of-00001  model.index
python_nn_model/Autoencoder/screens/alien/: 100.matrix  1000.matrix  1001.matrix  1002.matrix  1003.matrix  1004.matrix  1005.matrix  1006.matrix  1007.matrix  1008.matrix  1009.matrix  101.matrix  1010.matrix  1011.matrix  1012.matrix  1013.matrix  1014.matrix  1015.matrix  1016.matrix  1017.matrix  1018.matrix  1019.matrix  102.matrix  1020.matrix  1021.matrix  1022.matrix  1023.matrix  1024.matrix  1025.matrix  1026.matrix  1027.matrix  1028.matrix  1029.matrix  (+3215 more)
python_nn_model/curr_step_predictor/: AEModel.py  constants.py  layers.py  predict.py  train.py
python_nn_model/n_step_predictor/: AEModel.py  constants.py  layers.py  predict.py  train.py
python_nn_model/one_step_predictor/: AEModel.py  constants.py  layers.py  predict.py  train.py
python_nn_model/screens/: savemean.py
python_nn_model/src/: AEModel big cnn+dense 1024.py  AEModel big cnn+dense.py  AEModel big cnn_dense 2048.py  AEModel cnn.py  AEModel sm cnn+dense .py  AEModel sm relu_mean.py  AEModel.py  CaptchaCracker.ipynb  train.py  train_batch.py
results/: Alien_BGSFeatures_18000_0_10000_epic1.txt  Alien_BGSFeatures_18000_0_10000_epic2.txt  Alien_BGSFeatures_18000_0_10000_epic3.txt  Alien_BPROSFeatures_18000_0_10000_epic1.txt  Alien_RAMFeatures_18000_0_10000_epic1.txt  Alien_RAMFeatures_18000_0_10000_epic2.txt  Alien_RAMFeatures_18000_0_10000_epic3.txt  Freeway_BGSFeatures_18000_0_10000_epic1.txt  Freeway_BGSFeatures_18000_0_10000_epic2.txt  Freeway_BPROSFeatures_18000_0_10000_epic1.txt  Freeway_RAMFeatures_18000_0_10000_epic1.txt  Freeway_RAMFeatures_18000_0_10000_epic2.txt  Freeway_RAMFeatures_18000_0_10000_epic3.txt  Tennis_BGSFeatures_18000_0_10000_epic1.txt  Tennis_BPROSFeatures_18000_0_10000_epic1.txt  results.txt
src/: CMakeLists.txt  main.cpp
src/agents/: BPROSFeature.cpp  BPROSFeature.hpp  EFeatureIW1Search.cpp  EFeatureIW1Search.hpp  FullSearchTree.cpp  FullSearchTree.hpp  IW1Search.cpp  IW1Search.hpp  MhtBPROSFeature.cpp  MhtBPROSFeature.hpp  RandomAgent.cpp  RolloutIW1Search.cpp  RolloutIW1Search.hpp  SDLKeyboardAgent.cpp  SearchAgent.cpp  SearchAgent.hpp  SearchTree.cpp  SearchTree.hpp  TreeNode.cpp  TreeNode.hpp  UCTSearchTree.hpp  bit_array.cxx  bit_array.d  bit_array.hxx  bit_matrix.cxx  bit_matrix.d  bit_matrix.hxx  module.mk
src/common/: Array.hxx  Constants.h  Defaults.cpp  SoundNull.d  display_screen.cpp  display_screen.h  export_screen.cpp  export_screen.h  random_tools.h
src/controllers/: ale_controller.cpp  ale_controller.hpp  internal_controller.cpp  internal_controller.hpp
src/emucore/: Cart.d  CartAR.d  Console.d  FSNode.d  OSystem.d  Props.d  PropsSet.d  Settings.d  Settings.hxx  TIA.d
src/emucore/m6502/src/: M6502.d  M6502Hi.d  M6502Low.d  System.d
src/environment/: ale_screen.hpp  ale_state.cpp  ale_state.hpp  stella_environment.cpp  stella_environment.hpp
src/games/supported/: Alien.cpp  MsPacman.cpp  MsPacman.hpp  Seaquest.cpp  SpaceInvaders.cpp
src/os_dependent/: OSystemUNIX.d  SettingsUNIX.d
src/predictors/: CNN_AE.cpp  CNN_AE.hpp  cnnAE.cpp  cnnAE.hpp  cnnAE_model_loader.cpp  cnnAE_model_loader.hxx  cs_predictor.cpp  cs_predictor.hpp  model_loader.cpp  model_loader.hxx  module.mk  ns_predictor.cpp  ns_predictor.hpp  os_predictor.cpp  os_predictor.hpp
src/py_predictors/: CNN_AE.hpp  module.mk
(+103603 files in other folders)
