cmake_minimum_required(VERSION 3.9)
project(src)

set(CMAKE_CXX_STANDARD 11)

add_executable(src
        agents/BestFirstSearch.cpp
        agents/BestFirstSearch.hpp
        agents/bit_array.cxx
        agents/bit_array.hxx
        agents/bit_matrix.hxx
        agents/BreadthFirstSearch.cpp
        agents/BreadthFirstSearch.hpp
        agents/FullSearchTree.cpp
        agents/FullSearchTree.hpp
        agents/IW1Search.cpp
        agents/IW1Search.hpp
        agents/PlayerAgent.cpp
        agents/PlayerAgent.hpp
        agents/RandomAgent.cpp
        agents/RandomAgent.hpp
        agents/SDLKeyboardAgent.cpp
        agents/SDLKeyboardAgent.hpp
        agents/SearchAgent.cpp
        agents/SearchAgent.hpp
        agents/SearchTree.cpp
        agents/SearchTree.hpp
        agents/SimpleBanditAgent.cpp
        agents/SimpleBanditAgent.hpp
        agents/SingleActionAgent.cpp
        agents/SingleActionAgent.hpp
        agents/TreeNode.cpp
        agents/TreeNode.hpp
        agents/UCTSearchTree.cpp
        agents/UCTSearchTree.hpp
        agents/UCTTreeNode.cpp
        agents/UCTTreeNode.hpp
        agents/UniformCostSearch.cpp
        agents/UniformCostSearch.hpp
        common/Array.hxx
        common/Constants.cpp
        common/Constants.h
        common/Defaults.cpp
        common/Defaults.hpp
        common/display_screen.cpp
        common/display_screen.h
        common/export_screen.cpp
        common/export_screen.h
        common/GuiUtils.hxx
        common/misc_tools.h
        common/random_tools.h
        common/RectList.cxx
        common/RectList.hxx
        common/SoundNull.cxx
        common/SoundNull.hxx
        common/SoundSDL.cxx
        common/SoundSDL.hxx
        common/time.hxx
        common/Version.hxx
        common/VideoModeList.hxx
        controllers/ale_controller.cpp
        controllers/ale_controller.hpp
        controllers/fifo_controller.cpp
        controllers/fifo_controller.hpp
        controllers/internal_controller.cpp
        controllers/internal_controller.hpp
        controllers/rlglue_controller.cpp
        controllers/rlglue_controller.hpp
        controllers/trajectory_controller.cpp
        controllers/trajectory_controller.hpp
        emucore/m6502/src/bspf/src/bspf.hxx
        emucore/m6502/src/Device.cxx
        emucore/m6502/src/Device.hxx
        emucore/m6502/src/M6502.cxx
        emucore/m6502/src/M6502.hxx
        emucore/m6502/src/M6502Hi.cxx
        emucore/m6502/src/M6502Hi.hxx
        emucore/m6502/src/M6502Low.cxx
        emucore/m6502/src/M6502Low.hxx
        emucore/m6502/src/NullDev.cxx
        emucore/m6502/src/NullDev.hxx
        emucore/m6502/src/System.cxx
        emucore/m6502/src/System.hxx
        emucore/rsynth/config.h
        emucore/rsynth/darray.c
        emucore/rsynth/darray.h
        emucore/rsynth/elements.c
        emucore/rsynth/holmes.c
        emucore/rsynth/opsynth.c
        emucore/rsynth/phfeat.h
        emucore/rsynth/phones.c
        emucore/rsynth/phones.h
        emucore/rsynth/phtoelm.c
        emucore/rsynth/phtoelm.h
        emucore/rsynth/rsynth.h
        emucore/rsynth/trie.c
        emucore/rsynth/trie.h
        emucore/rsynth/useconfig.h
        emucore/AtariVox.cxx
        emucore/AtariVox.hxx
        emucore/Booster.cxx
        emucore/Booster.hxx
        emucore/Cart.cxx
        emucore/Cart.hxx
        emucore/Cart0840.cxx
        emucore/Cart0840.hxx
        emucore/Cart2K.cxx
        emucore/Cart2K.hxx
        emucore/Cart3E.cxx
        emucore/Cart3E.hxx
        emucore/Cart3F.cxx
        emucore/Cart3F.hxx
        emucore/Cart4A50.cxx
        emucore/Cart4A50.hxx
        emucore/Cart4K.cxx
        emucore/Cart4K.hxx
        emucore/CartAR.cxx
        emucore/CartAR.hxx
        emucore/CartCV.cxx
        emucore/CartCV.hxx
        emucore/CartDPC.cxx
        emucore/CartDPC.hxx
        emucore/CartE0.cxx
        emucore/CartE0.hxx
        emucore/CartE7.cxx
        emucore/CartE7.hxx
        emucore/CartF4.cxx
        emucore/CartF4.hxx
        emucore/CartF4SC.cxx
        emucore/CartF4SC.hxx
        emucore/CartF6.cxx
        emucore/CartF6.hxx
        emucore/CartF6SC.cxx
        emucore/CartF6SC.hxx
        emucore/CartF8.cxx
        emucore/CartF8.hxx
        emucore/CartF8SC.cxx
        emucore/CartF8SC.hxx
        emucore/CartFASC.cxx
        emucore/CartFASC.hxx
        emucore/CartFE.cxx
        emucore/CartFE.hxx
        emucore/CartMB.cxx
        emucore/CartMB.hxx
        emucore/CartMC.cxx
        emucore/CartMC.hxx
        emucore/CartUA.cxx
        emucore/CartUA.hxx
        emucore/Console.cxx
        emucore/Console.hxx
        emucore/Control.cxx
        emucore/Control.hxx
        emucore/DefProps.hxx
        emucore/Deserializer.cxx
        emucore/Deserializer.hxx
        emucore/Driving.cxx
        emucore/Driving.hxx
        emucore/Event.cxx
        emucore/Event.hxx
        emucore/FSNode.cxx
        emucore/FSNode.hxx
        emucore/Joystick.cxx
        emucore/Joystick.hxx
        emucore/Keyboard.cxx
        emucore/Keyboard.hxx
        emucore/M6532.cxx
        emucore/M6532.hxx
        emucore/MD5.cxx
        emucore/MD5.hxx
        emucore/MediaSrc.cxx
        emucore/MediaSrc.hxx
        emucore/OSystem.cxx
        emucore/OSystem.hxx
        emucore/Paddles.cxx
        emucore/Paddles.hxx
        emucore/Props.cxx
        emucore/Props.hxx
        emucore/PropsSet.cxx
        emucore/PropsSet.hxx
        emucore/Random.cxx
        emucore/Random.hxx
        emucore/Serializer.cxx
        emucore/Serializer.hxx
        emucore/Settings.cxx
        emucore/Settings.hxx
        emucore/Sound.hxx
        emucore/SpeakJet.cxx
        emucore/SpeakJet.hxx
        emucore/Switches.cxx
        emucore/Switches.hxx
        emucore/TIA.cxx
        emucore/TIA.hxx
        emucore/TIASnd.cxx
        emucore/TIASnd.hxx
        emucore/unzip.c
        emucore/unzip.h
        environment/ale_ram.hpp
        environment/ale_screen.hpp
        environment/ale_state.cpp
        environment/ale_state.hpp
        environment/phosphor_blend.cpp
        environment/phosphor_blend.hpp
        environment/stella_environment.cpp
        environment/stella_environment.hpp
        games/supported/AirRaid.cpp
        games/supported/AirRaid.hpp
        games/supported/Alien.cpp
        games/supported/Alien.hpp
        games/supported/Amidar.cpp
        games/supported/Amidar.hpp
        games/supported/Assault.cpp
        games/supported/Assault.hpp
        games/supported/Asterix.cpp
        games/supported/Asterix.hpp
        games/supported/Asteroids.cpp
        games/supported/Asteroids.hpp
        games/supported/Atlantis.cpp
        games/supported/Atlantis.hpp
        games/supported/BankHeist.cpp
        games/supported/BankHeist.hpp
        games/supported/BattleZone.cpp
        games/supported/BattleZone.hpp
        games/supported/BeamRider.cpp
        games/supported/BeamRider.hpp
        games/supported/Berzerk.cpp
        games/supported/Berzerk.hpp
        games/supported/Bowling.cpp
        games/supported/Bowling.hpp
        games/supported/Boxing.cpp
        games/supported/Boxing.hpp
        games/supported/Breakout.cpp
        games/supported/Breakout.hpp
        games/supported/Carnival.cpp
        games/supported/Carnival.hpp
        games/supported/Centipede.cpp
        games/supported/Centipede.hpp
        games/supported/ChopperCommand.cpp
        games/supported/ChopperCommand.hpp
        games/supported/CrazyClimber.cpp
        games/supported/CrazyClimber.hpp
        games/supported/Defender.cpp
        games/supported/Defender.hpp
        games/supported/DemonAttack.cpp
        games/supported/DemonAttack.hpp
        games/supported/DoubleDunk.cpp
        games/supported/DoubleDunk.hpp
        games/supported/ElevatorAction.cpp
        games/supported/ElevatorAction.hpp
        games/supported/Enduro.cpp
        games/supported/Enduro.hpp
        games/supported/FishingDerby.cpp
        games/supported/FishingDerby.hpp
        games/supported/Freeway.cpp
        games/supported/Freeway.hpp
        games/supported/Frostbite.cpp
        games/supported/Frostbite.hpp
        games/supported/Gopher.cpp
        games/supported/Gopher.hpp
        games/supported/Gravitar.cpp
        games/supported/Gravitar.hpp
        games/supported/Hero.cpp
        games/supported/Hero.hpp
        games/supported/IceHockey.cpp
        games/supported/IceHockey.hpp
        games/supported/JamesBond.cpp
        games/supported/JamesBond.hpp
        games/supported/JourneyEscape.cpp
        games/supported/JourneyEscape.hpp
        games/supported/Kangaroo.cpp
        games/supported/Kangaroo.hpp
        games/supported/Krull.cpp
        games/supported/Krull.hpp
        games/supported/KungFuMaster.cpp
        games/supported/KungFuMaster.hpp
        games/supported/MontezumaRevenge.cpp
        games/supported/MontezumaRevenge.hpp
        games/supported/MsPacman.cpp
        games/supported/MsPacman.hpp
        games/supported/NameThisGame.cpp
        games/supported/NameThisGame.hpp
        games/supported/Phoenix.cpp
        games/supported/Phoenix.hpp
        games/supported/Pitfall.cpp
        games/supported/Pitfall.hpp
        games/supported/Pong.cpp
        games/supported/Pong.hpp
        games/supported/Pooyan.cpp
        games/supported/Pooyan.hpp
        games/supported/PrivateEye.cpp
        games/supported/PrivateEye.hpp
        games/supported/QBert.cpp
        games/supported/QBert.hpp
        games/supported/RiverRaid.cpp
        games/supported/RiverRaid.hpp
        games/supported/RoadRunner.cpp
        games/supported/RoadRunner.hpp
        games/supported/RoboTank.cpp
        games/supported/RoboTank.hpp
        games/supported/Seaquest.cpp
        games/supported/Seaquest.hpp
        games/supported/Skiing.cpp
        games/supported/Skiing.hpp
        games/supported/Solaris.cpp
        games/supported/Solaris.hpp
        games/supported/SpaceInvaders.cpp
        games/supported/SpaceInvaders.hpp
        games/supported/StarGunner.cpp
        games/supported/StarGunner.hpp
        games/supported/Tennis.cpp
        games/supported/Tennis.hpp
        games/supported/TimePilot.cpp
        games/supported/TimePilot.hpp
        games/supported/Tutankham.cpp
        games/supported/Tutankham.hpp
        games/supported/UpNDown.cpp
        games/supported/UpNDown.hpp
        games/supported/Venture.cpp
        games/supported/Venture.hpp
        games/supported/VideoPinball.cpp
        games/supported/VideoPinball.hpp
        games/supported/WizardOfWor.cpp
        games/supported/WizardOfWor.hpp
        games/supported/YarsRevenge.cpp
        games/supported/YarsRevenge.hpp
        games/supported/Zaxxon.cpp
        games/supported/Zaxxon.hpp
        games/Roms.cpp
        games/Roms.hpp
        games/RomSettings.cpp
        games/RomSettings.hpp
        games/RomUtils.cpp
        games/RomUtils.hpp
        os_dependent/FSNodePOSIX.cxx
        os_dependent/FSNodeWin32.cxx
        os_dependent/OSystemUNIX.cxx
        os_dependent/OSystemUNIX.hxx
        os_dependent/OSystemWin32.cxx
        os_dependent/OSystemWin32.hxx
        os_dependent/SettingsUNIX.cxx
        os_dependent/SettingsUNIX.hxx
        os_dependent/SettingsWin32.cxx
        os_dependent/SettingsWin32.hxx
        ale_interface.hpp
        main.cpp)
